fix: fix live session history
